src/test/deca/codegen/valid/intermediaire2/convFloat/01readFloatInt.deca
// Description:
//    Programme initialisant une variable float avec un readInt -> teste le bon fonctionnement de convFloat.
//
// Resultats:
//    00readFloatInt.expected
//
// Historique:
//    cree le 10/06/2022

{
    float x = readInt();
    println(x);
}