src/test/deca/codegen/invalid/intermediaire2/wrongValue/00readInt.deca
// Description:
//  readInt avec l'integer maximal
//
// Resultats:
//  00readInt.expected 
// 
// Historique:
//    cree le 10/06/2022


{
    int x = readInt();
}